--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,13 +18,23 @@ include_directories(${COMMON_INCLUDES})
 file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
 
 
-set(SRC_FILES ${PROJECT_SOURCE_DIR}/src/Abstracts.cpp
-              ${PROJECT_SOURCE_DIR}/src/factory.cpp
-			  ${PROJECT_SOURCE_DIR}/src/Positions.cpp)
+set(SRC_FILES1 ${PROJECT_SOURCE_DIR}/src/Cleaner.cpp
+              ${PROJECT_SOURCE_DIR}/src/Creator.cpp
+              ${PROJECT_SOURCE_DIR}/src/Driver.cpp
+              ${PROJECT_SOURCE_DIR}/src/Employee.cpp
+              ${PROJECT_SOURCE_DIR}/src/Engineer.cpp
+              ${PROJECT_SOURCE_DIR}/src/Manager.cpp
+              ${PROJECT_SOURCE_DIR}/src/Personal.cpp
+			  ${PROJECT_SOURCE_DIR}/src/Programmer.cpp
+			  ${PROJECT_SOURCE_DIR}/src/ProjectManager.cpp
+			  ${PROJECT_SOURCE_DIR}/src/SeniorManager.cpp
+			  ${PROJECT_SOURCE_DIR}/src/Teamleader.cpp
+			  ${PROJECT_SOURCE_DIR}/src/Tester.cpp
+			  ${PROJECT_SOURCE_DIR}/src/WorkProject.cpp)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_library(task1_lib ${SRC_FILES})
+add_library(task1_lib ${SRC_FILES1})
 add_executable(task1 ${PROJECT_SOURCE_DIR}/src/main.cpp)
 
 target_link_libraries(task1 task1_lib)
